<resources>
    <string name="app_name">KazantsevArtur</string>
    <string name="open">Открыть меню</string>
    <string name="close">Закрыть меню</string>
    <string name="trainer">try string</string>
    <string name="categories">Категории</string>
    <string name="fruits">Фрукты</string>
    <string name="vegetables">Овощи</string>
    <string name="berries">Ягоды</string>
    <string name="add">Добавить</string>
    <string name="remove">Удалить выбранное</string>
    <string name="enter_item">Введите элемент</string>
    <string name="back_to_main">На главную</string>
    <string name="recycler_demo">RecyclerView с картинками</string>
    <string name="scroll_demo">ScrollView</string>
    <string name="spinner_demo">Spinner</string>
    <string name="select_category">Выберите категорию</string>
    <string name="selected">Выбрано:</string>
    <string name="apple">Яблоко</string>
    <string name="banana">Банан</string>
    <string name="orange">Апельсин</string>
    <string name="pear">Груша</string>
    <string name="grape">Виноград</string>
    <string name="carrot">Морковь</string>
    <string name="potato">Картофель</string>
    <string name="cucumber">Огурец</string>
    <string name="tomato">Помидор</string>
    <string name="onion">Лук</string>
    <string name="strawberry">Клубника</string>
    <string name="raspberry">Малина</string>
    <string name="blueberry">Черника</string>
    <string name="currant">Смородина</string>
    <string name="cherry">Вишня</string>
    <string name="enter_text">Введите текст</string>
    <string name="spinner_hint">Выберите элемент</string>
    <string name="item_name">Название</string>
    <string name="item_description">Описание</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>