<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <ListView
        android:id="@+id/listViewCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_demo"/>

    <Button
        android:id="@+id/btnScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_demo"/>

    <Button
        android:id="@+id/btnSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_demo"/>

</LinearLayout>